Add "Receipt items" entry to NavMenu with localization support

--- a/src/ExpenseExplorer.WebApp/Components/Layout/NavMenu.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Layout/NavMenu.razor
@@ -2,4 +2,5 @@
 
 <RadzenPanelMenu>
     <RadzenPanelMenuItem Path="" Match="NavLinkMatch.All" Text="@Localizer["Receipts"]" Icon="home" />
+    <RadzenPanelMenuItem Path="/receipt-items" Text="@Localizer["Receipt items"]" Icon="home" />
 </RadzenPanelMenu>
