Add error messages for receipt validation and update toast localization

--- a/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
@@ -48,7 +48,7 @@
         Result<Guid> result = await ReceiptService.CreateReceiptAsync(_store, _purchaseDate);
         await result
             .MatchAsync(
-                error => _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => e.Message))),
+                error => _toast.OpenAsync(string.Join(Environment.NewLine, error.Select(e => Localizer[e.Message]))),
                 id => Task.FromResult(NavigateTo($"/receipts/{id}")));
     }
 
