Standardize `PurchaseDate` localization key to `Purchase date`.

--- a/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
@@ -11,7 +11,7 @@
         <RadzenFormField Text="@Localizer["Store"]">
             <RadzenAutoComplete @bind-Value="@_store" Data="_stores" OpenOnFocus="true" LoadData="OnLoadData"/>
         </RadzenFormField>
-        <RadzenFormField Text="@Localizer["PurchaseDate"]">
+        <RadzenFormField Text="@Localizer["Purchase date"]">
             <RadzenDatePicker @bind-Value="@_purchaseDate"/>
         </RadzenFormField>
         <RadzenRow JustifyContent="JustifyContent.SpaceBetween">
