Standardize localization keys for page titles across components and resource files.

--- a/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
@@ -6,6 +6,8 @@
 @inject IStringLocalizer<NewReceipt> Localizer
 @inject NavigationManager NavigationManager
 
+<PageTitle>@Localizer["_Title"]</PageTitle>
+
 <RadzenCard class="rz-my-12 rz-mx-auto" Style="max-width: 420px">
     <RadzenStack Orientation="Orientation.Vertical">
         <RadzenFormField Text="@Localizer["Store"]">
