--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
@@ -9,7 +9,8 @@
 @inject ReceiptService ReceiptService
 @inject NavigationManager NavigationManager
 
-<PageTitle>@Localizer["_Receipt"]</PageTitle>
+<PageTitle>@Localizer["_Title"]</PageTitle>
+
 <RadzenCard Variant="Variant.Outlined" class="rz-my-2 rz-mx-auto">
     <RadzenRow JustifyContent="JustifyContent.Center">
         <RadzenFormField Text="@Localizer["Store"]">
