--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
@@ -7,7 +7,7 @@
 @inject ReceiptService ReceiptService
 @inject NavigationManager NavigationManager
 
-<PageTitle>@Localizer["_Receipts"]</PageTitle>
+<PageTitle>@Localizer["_Title"]</PageTitle>
 
 <RadzenDataGrid
     @ref=_grid
